--- a/configs/train_gcn_basic_01.yaml
+++ b/configs/train_gcn_basic_01.yaml
@@ -13,7 +13,7 @@ model:
 # trainer configuration
 trainer:
   # path to the checkpoint directory
-  checkpoint_dir: /Users/sherryshen/Dropbox/PhD/gcn/checkpoints
+  checkpoint_dir: /home/sherry/Dropbox/PhD/gcn/checkpoints
   # path to latest checkpoint or null; if provided the training will be resumed
   resume: null
   # how many iterations between validations, null if validate every epoch
@@ -23,7 +23,7 @@ trainer:
   # how many iterations evaluated in validations, set null for evaluating whole val set
   validate_iters: null
   # max number of epochs
-  epochs: 100
+  epochs: 1000
   # max number of iterations, set null for finishing all epochs
   iters: null
   # model with higher eval score is considered better
@@ -31,26 +31,42 @@ trainer:
 # optimizer configuration
 optimizer:
   # initial learning rate
-  learning_rate: 0.0001
+  learning_rate: 0.001
   # weight decay
-  weight_decay: 0.001
+  weight_decay: 0.00001
 # loss function configuration
 loss:
   # loss function to be used during training
-  name: XX
+  name: CrossEntropyLoss
 # evaluation metric configuration
 eval_metric:
   # evaluation metric to be used during training
-  name: XX
+  name: Accuracy
 lr_scheduler:
   name: MultiStepLR
-  milestones: [10, 30, 60]
+  milestones: [100, 300, 600]
   gamma: 0.2
 # data loaders configuration
 loaders:
-  # paths to the training datasets
-  train_path: xx
-  # paths to the validation datasets
-  val_path: xx
+  # name of the dataset
+  name: PNCEnrichedSet
+  # root path to save the created dataset
+  root: /home/sherry/Dropbox/PhD/Data/PNC_Enriched/pnc_enriched_exp01
+  # paths to the training list file
+  train_list: /home/sherry/Dropbox/PhD/Data/PNC_Enriched/pnc_enriched_exp01/train_list.txt
+  # output filename for training dataset
+  output_train: train_exp01.pkl
+  # paths to the validation list file
+  val_list: /home/sherry/Dropbox/PhD/Data/PNC_Enriched/pnc_enriched_exp01/val_list.txt
+  # output filename for validation dataset
+  output_val: val_exp01.pkl
+  # path to origianl data folder
+  path_data: /home/sherry/Dropbox/PhD/Data/PNC_Enriched/Enriched_Connectomes
+  # path to origianl label file
+  path_label: /home/sherry/Dropbox/PhD/Data/PNC_Enriched/Enriched_Connectomes_GO1_n968_LTN_dtiQApass_t1QApass_fsQApass.xlsx
+  # prediction target name
+  target_name: Sex
+  # index of features to keep
+  feature_mask: null
   # batch size in training process
-  batch_size: 4
+  batch_size: 64
