--- a/configs/train_gcn_basic_01.yaml
+++ b/configs/train_gcn_basic_01.yaml
@@ -23,7 +23,7 @@ trainer:
   # how many iterations evaluated in validations, set null for evaluating whole val set
   validate_iters: null
   # max number of epochs
-  epochs: 1000
+  epochs: 500
   # max number of iterations, set null for finishing all epochs
   iters: null
   # model with higher eval score is considered better
@@ -31,9 +31,9 @@ trainer:
 # optimizer configuration
 optimizer:
   # initial learning rate
-  learning_rate: 0.0001
+  learning_rate: 0.1
   # weight decay
-  weight_decay: 0.00001
+  weight_decay: 0.1
 # loss function configuration
 loss:
   # loss function to be used during training
@@ -43,8 +43,8 @@ eval_metric:
   # evaluation metric to be used during training
   name: Accuracy
 lr_scheduler:
-  name: StepLR
-  step_size: 500
+  name: MultiStepLR
+  milestones: [100, 200, 300]
   gamma: 0.1
 # data loaders configuration
 loaders:
@@ -60,6 +60,10 @@ loaders:
   val_list: /home/sherry/Dropbox/PhD/Data/ABIDE/abide_exp01/val_list.txt
   # output filename for validation dataset
   output_val: val_exp01.pkl
+  # paths to the test list file
+  test_list: /home/sherry/Dropbox/PhD/Data/ABIDE/abide_exp01/test_list.txt
+  # output filename for test dataset
+  output_test: test_exp01.pkl
   # path to origianl data folder
   path_data: /home/sherry/Dropbox/PhD/Data/ABIDE/ABIDE_Connectomes
   # path to origianl label file
@@ -69,4 +73,4 @@ loaders:
   # index of features to keep
   feature_mask: null
   # batch size in training process
-  batch_size: 32
+  batch_size: 64
